--- a/css/styles.css
+++ b/css/styles.css
@@ -662,22 +662,6 @@ main {
     line-height: 1.6rem;
 }
 
-.two-col {
-    display: grid;
-    grid-template-areas:
-    'image'
-    'article';
-    gap: 2rem;
-}
-
-.two-col img { 
-    max-width: 400px;
-    grid-area: image;
-}
-
-.two-col article {
-    grid-area: article;
-}
 
 @media screen and (min-width: 800px) {
     .form_field {
